--- a/frontend/index.html
+++ b/frontend/index.html
@@ -244,12 +244,40 @@
     <!-- Modal -->
     <div id="id01" class="modal">
       <!-- Need to write python http requests-->
+      <!-- action="./scripts/login.js" -->
+      <div class="imgcontainer">
+        <span
+          onclick="document.getElementById('id01').style.display='none'"
+          class="close"
+          title="Close Modal"
+          >&times;</span
+        >
+        <img src="img_avatar2.png" alt="Avatar" class="avatar" />
+      </div>
       <form
         class="modal-content animate"
-        action="/action_page.php"
         method="post"
+        id="LoginForm"
+        onsubmit="return false"
       >
-        <div class="imgcontainer">
+        <div class="FormRow">
+          <label for="Username">Username:</label>
+          <input type="text" size="15" id="Username" name="Username" />
+        </div>
+        <div class="FormRow">
+          <label for="Password">Password:</label>
+          <input type="password" size="15" id="Password" name="Password" />
+        </div>
+        <div class="FormRow" id="LoginButtonDiv">
+          <input type="submit" value="Login" />
+        </div>
+        <div id="BadLogin">
+          <p>
+            The login information you entered does not match an account in our
+            records. Please try again.
+          </p>
+        </div>
+        <!-- <div class="imgcontainer">
           <span
             onclick="document.getElementById('id01').style.display='none'"
             class="close"
@@ -260,24 +288,24 @@
         </div>
 
         <div class="container">
-          <label for="uname"><b>Username</b></label>
+          <label for="Username"><b>Username</b></label>
           <input
             type="text"
             placeholder="Enter Username"
-            name="uname"
+            name="Username"
             required
           />
 
-          <label for="psw"><b>Password</b></label>
+          <label for="Password"><b>Password</b></label>
           <input
             type="password"
             placeholder="Enter Password"
-            name="psw"
+            name="Password"
             required
           />
 
-          <button type="submit">Login</button>
-        </div>
+          <button value="Login" type="submit">Login</button>
+        </div> -->
 
         <div class="container" style="background-color: #f1f1f1">
           <button
@@ -355,6 +383,380 @@
     <div id="preloader"></div>
 
     <!-- Vendor JS Files -->
+    <script>
+      function loginResults() {
+        var loggedIn = document.getElementById("LoggedIn");
+        var badLogin = document.getElementById("BadLogin");
+        if (xmlhttp.responseText.indexOf("failed") == -1) {
+          loggedIn.innerHTML = "Logged in as " + xmlhttp.responseText;
+          loggedIn.style.display = "block";
+          form.style.display = "none";
+        } else {
+          badLogin.style.display = "block";
+          form.Username.select();
+          form.Username.className = "Highlighted";
+          setTimeout(function () {
+            badLogin.style.display = "none";
+          }, 3000);
+        }
+      }
+
+      function login(form) {
+        un = form.Username.value;
+        pw = form.Password.value;
+        credentials = { user_name: un, password: pw };
+        console.log(credentials);
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function () {
+          if (this.readyState == 4 && this.status == 200) {
+            document.getElementById("demo").innerHTML = this.responseText;
+          }
+        };
+
+        xhttp.open("POST", "http://127.0.0.1:5000/login", true);
+        xhttp.setRequestHeader("Content-type", "application/json");
+        xhttp.send(JSON.stringify(credentials));
+      }
+
+      window.addEventListener("load", function () {
+        var loginForm = document.getElementById("LoginForm");
+        console.log("This is working 390");
+        window.addEventListener("submit", function () {
+          login(loginForm);
+        });
+      });
+    </script>
+
+    <!-- <script src="scripts/login.js"></script> -->
+
+      /* Add Zoom Animation */
+      .animate {
+        -webkit-animation: animatezoom 0.6s;
+        animation: animatezoom 0.6s;
+      }
+
+      @-webkit-keyframes animatezoom {
+        from {
+          -webkit-transform: scale(0);
+        }
+        to {
+          -webkit-transform: scale(1);
+        }
+      }
+
+      @keyframes animatezoom {
+        from {
+          transform: scale(0);
+        }
+        to {
+          transform: scale(1);
+        }
+      }
+
+      /* Change styles for span and cancel button on extra small screens */
+      @media screen and (max-width: 300px) {
+        span.psw {
+          display: block;
+          float: none;
+        }
+        .cancelbtn {
+          width: 100%;
+        }
+      }
+    </style>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+
+    <title>Mental Health App</title>
+    <meta content="" name="description" />
+    <meta content="" name="keywords" />
+
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon" />
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Krub:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+      rel="stylesheet"
+    />
+
+    <!-- Vendor CSS Files -->
+    <link
+      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet" />
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
+    <link
+      href="assets/vendor/owl.carousel/assets/owl.carousel.min.css"
+      rel="stylesheet"
+    />
+    <link href="assets/vendor/venobox/venobox.css" rel="stylesheet" />
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
+
+    <!-- Template Main CSS File -->
+    <link href="assets/css/style.css" rel="stylesheet" />
+
+    <!-- =======================================================
+  * Template Name: Bikin - v2.2.0
+  * Template URL: https://bootstrapmade.com/bikin-free-simple-landing-page-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+  </head>
+
+  <body>
+    <!-- ======= Header ======= -->
+    <header id="header" class="fixed-top">
+      <div class="container d-flex align-items-center">
+        <h1 class="logo mr-auto"><a href="index.html">Help Bot</a></h1>
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+        <!-- <nav class="nav-menu d-none d-lg-block">
+          <ul>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#pricing">Pricing</a></li>
+            <li class="drop-down">
+              <a href="">Drop Down</a>
+              <ul>
+                <li><a href="#">Drop Down 1</a></li>
+                <li class="drop-down">
+                  <a href="#">Deep Drop Down</a>
+                  <ul>
+                    <li><a href="#">Deep Drop Down 1</a></li>
+                    <li><a href="#">Deep Drop Down 2</a></li>
+                    <li><a href="#">Deep Drop Down 3</a></li>
+                    <li><a href="#">Deep Drop Down 4</a></li>
+                    <li><a href="#">Deep Drop Down 5</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Drop Down 2</a></li>
+                <li><a href="#">Drop Down 3</a></li>
+                <li><a href="#">Drop Down 4</a></li>
+              </ul>
+            </li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+        .nav-menu -->
+
+        <!-- <a href="#about" class="get-started-btn scrollto">Get Started</a> -->
+      </div>
+    </header>
+    <!-- End Header -->
+
+    <!-- ======= Hero Section ======= -->
+    <section id="hero" class="d-flex align-items-center">
+      <div
+        class="container d-flex flex-column align-items-center justify-content-center"
+        data-aos="fade-up"
+      >
+        <h1>We're all humans after all</h1>
+        <h2>Mental health survellaince for your everday needs</h2>
+        <button
+          onclick="document.getElementById('id01').style.display='block'"
+          style="width: auto"
+          class="btn-get-started"
+        >
+          Sign In
+        </button>
+      </div>
+    </section>
+    <!-- End Hero -->
+
+    <!-- Modal -->
+    <div id="id01" class="modal">
+      <!-- Need to write python http requests-->
+      <!-- action="./scripts/login.js" -->
+      <div class="imgcontainer">
+        <span
+          onclick="document.getElementById('id01').style.display='none'"
+          class="close"
+          title="Close Modal"
+          >&times;</span
+        >
+        <img src="img_avatar2.png" alt="Avatar" class="avatar" />
+      </div>
+      <form
+        class="modal-content animate"
+        method="post"
+        id="LoginForm"
+        onsubmit="return false"
+      >
+        <div class="FormRow">
+          <label for="Username">Username:</label>
+          <input type="text" size="15" id="Username" name="Username" />
+        </div>
+        <div class="FormRow">
+          <label for="Password">Password:</label>
+          <input type="password" size="15" id="Password" name="Password" />
+        </div>
+        <div class="FormRow" id="LoginButtonDiv">
+          <input type="submit" value="Login" />
+        </div>
+        <div id="BadLogin">
+          <p>
+            The login information you entered does not match an account in our
+            records. Please try again.
+          </p>
+        </div>
+        <!-- <div class="imgcontainer">
+          <span
+            onclick="document.getElementById('id01').style.display='none'"
+            class="close"
+            title="Close Modal"
+            >&times;</span
+          >
+          <img src="img_avatar2.png" alt="Avatar" class="avatar" />
+        </div>
+
+        <div class="container">
+          <label for="Username"><b>Username</b></label>
+          <input
+            type="text"
+            placeholder="Enter Username"
+            name="Username"
+            required
+          />
+
+          <label for="Password"><b>Password</b></label>
+          <input
+            type="password"
+            placeholder="Enter Password"
+            name="Password"
+            required
+          />
+
+          <button value="Login" type="submit">Login</button>
+        </div> -->
+
+        <div class="container" style="background-color: #f1f1f1">
+          <button
+            type="button"
+            onclick="document.getElementById('id01').style.display='none'"
+            class="cancelbtn"
+          >
+            Cancel
+          </button>
+        </div>
+      </form>
+    </div>
+
+    <!-- End Modal -->
+
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
+      <div class="footer-top">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-3 col-md-6 footer-contact">
+              <h3>Bikin</h3>
+              <p>
+                A108 Adam Street <br />
+                New York, NY 535022<br />
+                United States <br /><br />
+                <strong>Phone:</strong> +1 5589 55488 55<br />
+                <strong>Email:</strong> info@example.com<br />
+              </p>
+            </div>
+
+            <div class="col-lg-2 col-md-6 footer-links">
+              <h4>Useful Links</h4>
+              <ul>
+                <li>
+                  <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i> <a href="#">About us</a>
+                </li>
+                <!-- <li>
+                  <i class="bx bx-chevron-right"></i> <a href="#">Services</a>
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i>
+                  <a href="#">Terms of service</a>
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i>
+                  <a href="#">Privacy policy</a>
+                </li> -->
+              </ul>
+            </div>
+
+            <div class="col-lg-4 col-md-6 footer-newsletter">
+              <h4>Join Our Newsletter</h4>
+              <p>
+                Tamen quem nulla quae legam multos aute sint culpa legam noster
+                magna
+              </p>
+              <!-- <form action="" method="post">
+                <input type="email" name="email" /><input
+                  type="submit"
+                  value="Subscribe"
+                />
+              </form> -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- End Footer -->
+
+    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+    <div id="preloader"></div>
+
+    <!-- Vendor JS Files -->
+    <script>
+      function loginResults() {
+        var loggedIn = document.getElementById("LoggedIn");
+        var badLogin = document.getElementById("BadLogin");
+        if (xmlhttp.responseText.indexOf("failed") == -1) {
+          loggedIn.innerHTML = "Logged in as " + xmlhttp.responseText;
+          loggedIn.style.display = "block";
+          form.style.display = "none";
+        } else {
+          badLogin.style.display = "block";
+          form.Username.select();
+          form.Username.className = "Highlighted";
+          setTimeout(function () {
+            badLogin.style.display = "none";
+          }, 3000);
+        }
+      }
+
+      function login(form) {
+        un = form.Username.value;
+        pw = form.Password.value;
+        credentials = { user_name: un, password: pw };
+        console.log(credentials);
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function () {
+          if (this.readyState == 4 && this.status == 200) {
+            document.getElementById("demo").innerHTML = this.responseText;
+          }
+        };
+
+        xhttp.open("POST", "http://127.0.0.1:5000/login", true);
+        xhttp.setRequestHeader("Content-type", "application/json");
+        xhttp.send(JSON.stringify(credentials));
+      }
+
+      window.addEventListener("load", function () {
+        var loginForm = document.getElementById("LoginForm");
+        console.log("This is working 390");
+        window.addEventListener("submit", function () {
+          login(loginForm);
+        });
+      });
+    </script>
+
+    <!-- <script src="scripts/login.js"></script> -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
