add UI features

--- a/ui/console.html
+++ b/ui/console.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>FormWizard_v2</title>
+		<title>Euphoria</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="colorlib.com">
 		<!-- LINEARICONS -->
@@ -20,7 +20,8 @@
 	<body>
 		<div class="wrapper">
 			<div class="inner">
-                <h3>Your Dashboard</h3>
+				<h3>User Console: </h3> 
+				<h2 style="font-size: 25px"> Welcome Canadian Mental Health Association</h2>
 				<div class="image-holder">
 					<img src="assets/img/overlay.jpg" alt="">
 				</div>
@@ -88,7 +89,7 @@
 	                <section class="section-style">
                         <div class="form-wrapper">
                                 <div class="form-holder">
-                                    <h2>Thank you for making someone's day a little brighter :)</h2>
+                                    <h2 style="color: #305f72">Thank you for making someone's day a little brighter :)</h2>
                                 </div>
                                 <button style="width: 195px; margin-top: 45px;"><a href="console.html">Return to home</a>
                                 </button>
