--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Mental Health App</title>
+    <title>Euphoria</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -38,7 +38,7 @@
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center">
         <!-- <h1 class="logo mr-auto"><a href="index.html">Euphoria</a></h1> -->
-        <a href="index.html" class="logo mr-auto"><img src="assets/img/logo-light.png" alt="" class="img-fluid"></a>
+        <a href="index.html" class="logo mr-auto"><img src="assets/img/logo1.png" alt="" class="img-fluid"></a>
       </div>
     </header>
     <!-- End Header -->
@@ -49,8 +49,9 @@
         class="container d-flex flex-column align-items-center justify-content-center"
         data-aos="fade-up"
       >
-        <h1>We're all humans after all</h1>
-        <h2>Mental health survellaince for nurturing wellness</h2>
+        <h1>Euphoria</h1>
+        <h2>Nurturing mental wellness, one subreddit at a time
+        </h2>
         <a href="console.html" class="btn-get-started">Sign In</a>
         <img
           src="assets/img/bg.png"
@@ -68,7 +69,7 @@
             <div class="footer">
               <h3>Euphoria</h3>
               <p>
-                For a better mental state
+                Nurturing mental wellness, one subreddit at a time
               </p>
             </div>
 
