--- a/frontend/index.html
+++ b/frontend/index.html
@@ -738,7 +738,9 @@
         var xhttp = new XMLHttpRequest();
         xhttp.onreadystatechange = function () {
           if (this.readyState == 4 && this.status == 200) {
-            document.getElementById("demo").innerHTML = this.responseText;
+            // document.getElementById("demo").innerHTML = this.responseText;
+            console.log(this.responseText)
+            console.log(JSON.parse(this.responseText).password)
           }
         };
 
@@ -757,6 +759,7 @@
     </script>
 
     <!-- <script src="scripts/login.js"></script> -->
+    
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
@@ -768,5 +771,6 @@
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </body>
 </html>
