integrate index.html

--- a/ui/console.html
+++ b/ui/console.html
@@ -29,6 +29,7 @@
             		<!-- SECTION 1 -->
 	                <h4>Choose Time Frame</h4>
 	                <section>
+						<h5 style="font-size: 15px">Choose the time frame from which you would like to scan posts from.</h5>
 						<div class="form-row">
 							<div class="form-holder">
 								<input type="text" class="form-control datepicker-here pl-85" data-language='en' data-date-format="dd - m - yyyy" id="dp1">
@@ -43,7 +44,7 @@
 						</div>
                         <div class="form-wrapper">
                             <button class="forward">Next Page
-                                <i class="zmdi zmdi-long-arrow-right"></i>
+								<i class="zmdi zmdi-long-arrow-right"></i>
                             </button>
                         </div>
                     </section>
@@ -80,7 +81,7 @@
 								<textarea name="" id="" class="form-control" style="height: 100px;" placeholder="Enter Message :"></textarea>
 							</div>
 						</div>
-	                    <button class="forward" style="width: 195px; margin-top: 44px;">Confirm
+	                    <button class="forward" style="width: 195px; margin-top: 44px;">Start Bot
 						</button> 
 	                </section>
 
