--- a/ui/index.html
+++ b/ui/index.html
@@ -1,6 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+      }
+
+      /* Full-width input fields */
+      input[type="text"],
+      input[type="password"] {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
+      }
+
+      /* Set a style for all buttons */
+      button {
+        background-color: #4caf50;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+      }
+
+      button:hover {
+        opacity: 0.8;
+      }
+
+      /* Extra styles for the cancel button */
+      .cancelbtn {
+        width: auto;
+        padding: 10px 18px;
+        background-color: #f44336;
+      }
+
+      /* Center the image and position the close button */
+      .imgcontainer {
+        text-align: center;
+        margin: 24px 0 12px 0;
+        position: relative;
+      }
+
+      img.avatar {
+        width: 40%;
+        border-radius: 50%;
+      }
+
+      .container {
+        padding: 16px;
+      }
+
+      span.psw {
+        float: right;
+        padding-top: 16px;
+      }
+
+      /* The Modal (background) */
+      .modal {
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Sit on top */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0, 0, 0); /* Fallback color */
+        background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+        padding-top: 60px;
+      }
+
+      /* Modal Content/Box */
+      .modal-content {
+        background-color: #fefefe;
+        margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+        border: 1px solid #888;
+        width: 80%; /* Could be more or less, depending on screen size */
+      }
+
+      /* The Close Button (x) */
+      .close {
+        position: absolute;
+        right: 25px;
+        top: 0;
+        color: #000;
+        font-size: 35px;
+        font-weight: bold;
+      }
+
+      .close:hover,
+      .close:focus {
+        color: red;
+        cursor: pointer;
+      }
+
+      /* Add Zoom Animation */
+      .animate {
+        -webkit-animation: animatezoom 0.6s;
+        animation: animatezoom 0.6s;
+      }
+
+      @-webkit-keyframes animatezoom {
+        from {
+          -webkit-transform: scale(0);
+        }
+        to {
+          -webkit-transform: scale(1);
+        }
+      }
+
+      @keyframes animatezoom {
+        from {
+          transform: scale(0);
+        }
+        to {
+          transform: scale(1);
+        }
+      }
+
+      /* Change styles for span and cancel button on extra small screens */
+      @media screen and (max-width: 300px) {
+        span.psw {
+          display: block;
+          float: none;
+        }
+        .cancelbtn {
+          width: 100%;
+        }
+      }
+    </style>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
@@ -25,12 +159,6 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
 
-    <!-- =======================================================
-  * Template Name: Bikin - v2.2.0
-  * Template URL: https://bootstrapmade.com/bikin-free-simple-landing-page-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
   </head>
 
   <body>
@@ -61,6 +189,86 @@
     </section>
     <!-- End Hero -->
 
+      <!-- Modal -->
+      <div id="id01" class="modal">
+        <!-- Need to write python http requests-->
+        <!-- action="./scripts/login.js" -->
+        <div class="imgcontainer">
+          <span
+            onclick="document.getElementById('id01').style.display='none'"
+            class="close"
+            title="Close Modal"
+            >&times;</span
+          >
+          <img src="img_avatar2.png" alt="Avatar" class="avatar" />
+        </div>
+        <form
+          class="modal-content animate"
+          method="post"
+          id="LoginForm"
+          onsubmit="return false"
+        >
+          <div class="FormRow">
+            <label for="Username">Username:</label>
+            <input type="text" size="15" id="Username" name="Username" />
+          </div>
+          <div class="FormRow">
+            <label for="Password">Password:</label>
+            <input type="password" size="15" id="Password" name="Password" />
+          </div>
+          <div class="FormRow" id="LoginButtonDiv">
+            <input type="submit" value="Login" />
+          </div>
+          <div id="BadLogin">
+            <p>
+              The login information you entered does not match an account in our
+              records. Please try again.
+            </p>
+          </div>
+          <!-- <div class="imgcontainer">
+            <span
+              onclick="document.getElementById('id01').style.display='none'"
+              class="close"
+              title="Close Modal"
+              >&times;</span
+            >
+            <img src="img_avatar2.png" alt="Avatar" class="avatar" />
+          </div>
+  
+          <div class="container">
+            <label for="Username"><b>Username</b></label>
+            <input
+              type="text"
+              placeholder="Enter Username"
+              name="Username"
+              required
+            />
+  
+            <label for="Password"><b>Password</b></label>
+            <input
+              type="password"
+              placeholder="Enter Password"
+              name="Password"
+              required
+            />
+  
+            <button value="Login" type="submit">Login</button>
+          </div> -->
+  
+          <div class="container" style="background-color: #f1f1f1">
+            <button
+              type="button"
+              onclick="document.getElementById('id01').style.display='none'"
+              class="cancelbtn"
+            >
+              Cancel
+            </button>
+          </div>
+        </form>
+      </div>
+  
+      <!-- End Modal -->
+
     <!-- ======= Footer ======= -->
     <footer id="footer">
       <div class="footer-top">
@@ -88,6 +296,51 @@
     <div id="preloader"></div>
 
     <!-- Vendor JS Files -->
+    <script>
+      function loginResults() {
+        var loggedIn = document.getElementById("LoggedIn");
+        var badLogin = document.getElementById("BadLogin");
+        if (xmlhttp.responseText.indexOf("failed") == -1) {
+          loggedIn.innerHTML = "Logged in as " + xmlhttp.responseText;
+          loggedIn.style.display = "block";
+          form.style.display = "none";
+        } else {
+          badLogin.style.display = "block";
+          form.Username.select();
+          form.Username.className = "Highlighted";
+          setTimeout(function () {
+            badLogin.style.display = "none";
+          }, 3000);
+        }
+      }
+
+      function login(form) {
+        un = form.Username.value;
+        pw = form.Password.value;
+        credentials = { user_name: un, password: pw };
+        console.log(credentials);
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function () {
+          if (this.readyState == 4 && this.status == 200) {
+            document.getElementById("demo").innerHTML = this.responseText;
+          }
+        };
+
+        xhttp.open("POST", "http://127.0.0.1:5000/login", true);
+        xhttp.setRequestHeader("Content-type", "application/json");
+        xhttp.send(JSON.stringify(credentials));
+      }
+
+      window.addEventListener("load", function () {
+        var loginForm = document.getElementById("LoginForm");
+        console.log("This is working 390");
+        window.addEventListener("submit", function () {
+          login(loginForm);
+        });
+      });
+    </script>
+
+    <!-- <script src="scripts/login.js"></script> -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
