partial refactor in frontend/index and adding endpoints in server

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Euphoria</title>
+    <meta content="" name="description" />
+    <meta content="" name="keywords" />
+    <!-- Styling for the modal -->
     <style>
       body {
         font-family: Arial, Helvetica, sans-serif;
@@ -135,10 +140,7 @@
         }
       }
     </style>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-
-    <title>Mental Health App</title>
+    <title>Euphoria</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -228,8 +230,8 @@
         class="container d-flex flex-column align-items-center justify-content-center"
         data-aos="fade-up"
       >
-        <h1>We're all humans after all</h1>
-        <h2>Mental health survellaince for your everday needs</h2>
+        <h1>Euphoria</h1>
+        <h2>Nurturing mental wellness, one subreddit at a time</h2>
         <button
           onclick="document.getElementById('id01').style.display='block'"
           style="width: auto"
@@ -327,13 +329,9 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>Bikin</h3>
+              <h3>Euphoria</h3>
               <p>
-                A108 Adam Street <br />
-                New York, NY 535022<br />
-                United States <br /><br />
-                <strong>Phone:</strong> +1 5589 55488 55<br />
-                <strong>Email:</strong> info@example.com<br />
+                Nurturing mental wellness, one subreddit at a time
               </p>
             </div>
 
