--- a/ui/console.html
+++ b/ui/console.html
@@ -83,7 +83,7 @@
                         </div>
 						<div class="form-row mb-21">
 							<div class="form-holder w-100">
-								<textarea id="personal_message" name="message" id="" class="form-control" style="height: 100px;" placeholder="Enter Message :"></textarea>
+								<textarea id="personal_message" name="message" id="" class="form-control" style="height: 80px;" placeholder="Enter Message :"></textarea>
 							</div>
 						</div>
                         <button class="forward" style="width: 195px; margin-top: 44px;">Next Page
@@ -115,13 +115,14 @@
 						<h4>User Settings</h4>
 	                <section id="bot_confirmation" class="section-style">
                         <div class="form-wrapper">
-								<button onclick="getConfiguration()"  type="submit" class="forward" style="width: 195px; margin-top: 44px;"> Load your user settings
+								<button onclick="getConfiguration()"  type="submit" class="forward" style="width: 195px; margin-top: 0px;"> Load your user settings
 								</button> 
-								<h5 id="result_reddit_community">Your subreddit will appear here</h5>
-								<h5 id="result_dm_title">Your message title will appear here</h5>
-								<h5 id="result_dm_message">Your message will appear here</h5>
-								<h5 id="result_user_name">Your username will appear here</h5>
-								<h5 id="result_password">Your password will appear here</h5>
+								<br>
+								<h5 style="font-size: 15px;padding: 10px -10px" id="result_reddit_community">Your subreddit will appear here</h5>
+								<h5 style="font-size: 15px;padding: 10px -10px" id="result_dm_title">Your message title will appear here</h5>
+								<h5 style="font-size: 15px;padding: 10px -10px" id="result_dm_message">Your message will appear here</h5>
+								<h5 style="font-size: 15px;padding: 10px -10px" id="result_user_name">Your username will appear here</h5>
+								<h5 style="font-size: 15px;padding: 10px -10px" id="result_password">Your password will appear here</h5>
 							<button style="width: 195px; margin-top: 45px;"><a href="console.html">Return to home</a>
 							</button>
 						</div>
